--- a/Lab-3/index.html
+++ b/Lab-3/index.html
@@ -4,6 +4,7 @@
     <link rel="icon" type="image/x-icon" href="../Lab-3/images/favicon-16x16.png">
     <meta charset=utf-8>
     <title>Лаб. №3: головна</title>
+    <link rel="stylesheet" type="text/css" href="../Lab-3/styles/styles.css">
 	
   </head>
   <body>
@@ -18,8 +19,10 @@
   <li>Перевага 1</li>
   <li>Перевага 2
   <ul>
+    <div class="li21">
   <li>Підпункт 2.1</li>
   <li>Підпункт 2.2</li>
+  </div>
   </ul>
   <li>Перевага 3
   </li>
