--- a/Lab-4/index.html
+++ b/Lab-4/index.html
@@ -6,7 +6,7 @@
 <title>Лабораторна робота №4</title>
 </head>
 <body>
-<form action="lab-4.html"target="post" method="POST">
+<form action="index.html"target="post" method="POST">
 <h1>Моя перша HTML-форма</h1>
 <p>Введіть данні про себе</p><br>
 <label>Ім'я:<input type="text" name="name"></label><br>
