--- a/Lab-3/index.html
+++ b/Lab-3/index.html
@@ -25,7 +25,7 @@
   <li>Перевага 3
   </li>
 
-  <p> Написати нам <a href="https://mail.google.com/mail/u/4/?ogbl#inbox?compose=CllgCJqWggFrHDrsCtwRqMcmrwqmWNlTSxLmRPpQhssDBkZKWrscCzLSWXCVNdMvsQmvMkRLBdV" target="blank">листа</a></p>
+  <p> Написати нам <a href="mailto:vladoslazar@gmail.com" target="blank">листа</a></p>
   <p>За посиланням нижче ви можете переглянути <a style="color:green"> відомості про нашу компанію </p>
   <p> <a href="about.html" target="_blank">про нас</a> </p>
     <script>alert('Привіт!')</script>
